--- a/templates/2.html
+++ b/templates/2.html
@@ -638,9 +638,9 @@
             <div class="flex justify-center items-center gap-2 mb-12">
                 <span class="material-symbols-outlined hover:scale-110 transition-transform">light_mode</span>
                 <section style="margin: 0; display: flex; justify-content: center; align-items: center;">
-                    <span id="current-time" class="text-2xl font-medium">로딩중...</span>
+                    <span id="current-time" class="text-2xl font-medium">--:--</span>
                     <span id="second" class="text-1xl font-medium"
-                        style="padding-top: 6px; padding-left: 3px;">로딩중...</span>
+                        style="padding-top: 6px; padding-left: 3px;">--</span>
                 </section>
             </div>
             <div class="grid grid-cols-2 gap-8">
@@ -653,7 +653,7 @@
                         <span class="text-base">온도</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="temperature" class="text-5xl font-bold">로딩중...</span>
+                        <span id="temperature" class="text-5xl font-bold">--</span>
                         <span class="text-3xl">°C</span>
                     </div>
                 </div>
@@ -666,7 +666,7 @@
                         <span class="text-base">습도</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="humidity" class="text-5xl font-bold">로딩중...</span>
+                        <span id="humidity" class="text-5xl font-bold">--</span>
                         <span class="text-3xl">%</span>
                     </div>
                 </div>
@@ -679,7 +679,7 @@
                         <span class="text-base">공기질</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="pm25" class="text-5xl font-bold">로딩중...</span>
+                        <span id="pm25" class="text-5xl font-bold">--</span>
                         <span class="text-3xl">μg/m³</span>
                     </div>
                 </div>
