--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,11 @@
 
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
+.custom-container {
+    width: 900px; /* 원하는 크기로 조정 */
+    max-width: 100%; /* 반응형 유지 */
+}
+
 #a,
 #b,
 #c {
