--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
                         <span class="text-base">온도</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="temperature" class="text-5xl font-medium">--</span>
-                        <span class="text-3xl">°C</span>
+                        <span id="temperature" class="text-15xl font-sml">--</span>
+                        <span class="text-5xl font-sml">°C</span>
                     </div>
                 </div>
 
@@ -49,8 +49,8 @@
                         <span class="text-base">습도</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="humidity" class="text-5xl font-medium">--</span>
-                        <span class="text-3xl">%</span>
+                        <span id="humidity" class="text-15xl font-sml">--</span>
+                        <span class="text-5xl font-sml">%</span>
                     </div>
                 </div>
 
@@ -62,8 +62,8 @@
                         <span class="text-base">공기질</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
-                        <span id="pm25" class="text-5xl font-medium">--</span>
-                        <span class="text-3xl">μg/m³</span>
+                        <span id="pm25" class="text-15xl font-sml">--</span>
+                        <span class="text-5xl font-sml">ppm</span>
                     </div>
                 </div>
                 <div class="center custom-item-container flex flex-col gap-2 p-4 rounded-xl hover:bg-gray-50/50 transition-colors">
