--- a/templates/styles.css
+++ b/templates/styles.css
@@ -18,7 +18,7 @@
 
 .custom-clock-container {
     width: 100%;
-    height: 200px;
+    height: 100px;
 }
 
 .center {
@@ -554,17 +554,26 @@ video {
     line-height: 52.800000000000004px;
 }
 
+#webcrumbs .text-15xl {
+    font-size: 90px;
+    line-height: 100px;
+}
+a
 #webcrumbs .text-base {
     font-size: 16px;
     line-height: 25.6px;
 }
 
 #webcrumbs .font-bold {
-    font-weight: 700;
+    font-weight: 500;
 }
 
 #webcrumbs .font-medium {
-    font-weight: 500;
+    font-weight: 300;
+}
+
+#webcrumbs .font-sml {
+    font-weight: 100;
 }
 
 #webcrumbs .text-blue-500 {
