--- a/static/styles.css
+++ b/static/styles.css
@@ -7,24 +7,23 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 .custom-container {
-    width: 1000px;
-    height: 750px;
+    width: 100%;
+    height: 100%;
 }
 
 .custom-item-container {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 
 .custom-clock-container {
     width: 100%;
-    height: 100px;
+    height: 20%;
 }
 
 .center {
     align-items: center;
     justify-content: center;
-    margin: 0;
 }
 
 #a,
