--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <div id="webcrumbs">
-        <div class="custom-container bg-white/80 backdrop-blur-lg rounded-xl shadow-lg p-8 border-[0.5px] border-gray-100">
+    <div id="webcrumbs" style="width: 100vw; height: 100vh;">
+        <div
+            class="custom-container bg-white/80 backdrop-blur-lg rounded-xl shadow-lg p-8 border-[0.5px] border-gray-100">
             <div class="flex gap-2 mb-6">
                 <div class="w-3 h-3 rounded-full bg-red-500 hover:opacity-80 transition-opacity"></div>
                 <div class="w-3 h-3 rounded-full bg-yellow-500 hover:opacity-80 transition-opacity"></div>
@@ -25,7 +26,8 @@
                 <span class="material-symbols-outlined font-medium text-5xl mb-2" id="c">dark_mode</span>
                 <section style="margin: 0; display: flex; justify-content: center; align-items: center;">
                     <span id="current-time" class="text-5xl font-medium">--:--</span>
-                    <span id="second" class="text-2xl font-medium" style="padding-top: 12px; padding-left: 4px;">--</span>
+                    <span id="second" class="text-2xl font-medium"
+                        style="padding-top: 12px; padding-left: 4px;">--</span>
                 </section>
             </div>
             <div class="center grid grid-cols-2 gap-8">
@@ -68,7 +70,8 @@
                         <span class="text-5xl font-sml">ppm</span>
                     </div>
                 </div>
-                <div class="center custom-item-container flex flex-col gap-2 p-4 rounded-xl hover:bg-gray-50/50 transition-colors">
+                <div
+                    class="center custom-item-container flex flex-col gap-2 p-4 rounded-xl hover:bg-gray-50/50 transition-colors">
                     <div class="flex items-center justify-center gap-2"> <span
                             class="material-symbols-outlined hover:scale-110 transition-transform">location_on</span>
                         <span class="text-base">위치</span>
@@ -82,6 +85,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
