--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@
                     <div class="flex items-center justify-center gap-2">
                         <span class="material-symbols-outlined hover:scale-110 transition-transform">air</span>
                         <span class="text-base">공기질</span>
+                        <span class="text-base">(공기청정타워)</span>
                     </div>
                     <div class="flex items-end justify-center gap-1">
                         <span id="pm25" class="text-15xl font-sml">--</span>
