add pm25_funtion, version and update gitignore

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
                         </div>
                     </section>
                 </div>
+                <p id="ver">--</p>
             </div>
         </div>
     </div>
