--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,15 @@
 
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
+#ver {
+    position: fixed;
+    bottom: 15px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .custom-container {
     width: 100%;
     height: 100%;
